# DAWAudioEngine

./: .gitignore  .gitmodules  RASPBERRY_PI_BUILD.md  README.md
.github/workflows/: ci.yml
.vscode.bak/: c_cpp_properties.json  settings.json
backend/: CMakeLists.txt  Doxyfile  Makefile  test_save_load.py
backend/include/: audio-context.hpp  audio-engine-core.hpp  audio-track.hpp  beat-track.hpp  message-handler.hpp  project-manager.hpp  song.hpp  songs-manager.hpp  tracks-manager.hpp  wave-table.hpp  websocket-server.hpp
backend/src/: audio-engine-core.cpp  audio-track.cpp  beat-track.cpp  main.cpp  project-manager.cpp  song.cpp  songs-manager.cpp  tracks-manager.cpp
backend/tests/: test.beattrack.cpp  test.wavetable.cpp
frontend/: README.md  components.json  electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  tsconfig.web.json
frontend/src/main/: index.ts
frontend/src/main/services/api/: health.ts  types.ts
frontend/src/main/services/websocket/: WebSocketService.ts  useWebSocket.ts  utils.ts
frontend/src/preload/: index.d.ts  index.ts
frontend/src/renderer/src/: App.tsx  main.tsx
frontend/src/renderer/src/assets/: main.css
frontend/src/renderer/src/features/toolbar/components/: Toolbar.tsx
frontend/src/renderer/src/features/toolbar/hooks/: useToolbar.tsx
frontend/src/renderer/src/features/webSocket/components/: WebSocketStatus.tsx
frontend/src/renderer/src/features/webSocket/hooks/: useWebSocket.ts
frontend/src/renderer/src/layouts/: MainLayout.tsx
